--- a/pedido-service/src/main/resources/application.properties
+++ b/pedido-service/src/main/resources/application.properties
@@ -1,24 +1,24 @@
 spring.application.name=pedido-service
 server.port=8084
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/pedidodb?currentSchema=public
+# Configurações do Banco de Dados
+spring.datasource.url=jdbc:postgresql://localhost:5432/pedidodb
 spring.datasource.username=postgres
 spring.datasource.password=gabriel18
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.cloud.compatibility-verifier.enabled=false
+spring.jpa.properties.hibernate.default_schema=public
+
+# Configurações de Logging (úteis para debug)
 logging.level.web=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.tool.schema=DEBUG
-spring.jpa.properties.hibernate.hbm2ddl.import_files_sql_extractor=org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
-spring.jpa.properties.hibernate.default_schema=public
-# application.properties
-feign.client.config.default.connectTimeout=3000
-feign.client.config.default.readTimeout=5000
-# URL do cliente-service
+logging.level.org.springframework.core.env=DEBUG
+
+# URL do cliente-service (ainda útil para RestTemplate)
 cliente.service.url=http://localhost:8083
 
-# Habilite o debug para verificar propriedades carregadas
-logging.level.org.springframework.core.env=DEBUG
+# Configuração de compatibilidade (se ainda necessária)
+spring.cloud.compatibility-verifier.enabled=false
