--- a/pedido-service/src/main/resources/application.properties
+++ b/pedido-service/src/main/resources/application.properties
@@ -18,7 +18,7 @@ logging.level.org.hibernate.tool.schema=DEBUG
 logging.level.org.springframework.core.env=DEBUG
 
 # URL do cliente-service (ainda útil para RestTemplate)
-cliente.service.url=http://localhost:8083
+cliente.service.url=http://localhost:8083/cliente
 
 # Configuração de compatibilidade (se ainda necessária)
 spring.cloud.compatibility-verifier.enabled=false
