--- a/pedido-service/src/main/resources/application.properties
+++ b/pedido-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=pedido-service
 server.port=8084
 
-# Configurações do Banco de Dados
+# ConfiguraÃ§Ãµes do Banco de Dados
 spring.datasource.url=jdbc:postgresql://localhost:5432/pedidodb
 spring.datasource.username=postgres
 spring.datasource.password=gabriel18
@@ -11,14 +11,14 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.default_schema=public
 
-# Configurações de Logging (úteis para debug)
+# ConfiguraÃ§Ãµes de Logging (Ãºteis para debug)
 logging.level.web=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.tool.schema=DEBUG
 logging.level.org.springframework.core.env=DEBUG
 
-# URL do cliente-service (ainda útil para RestTemplate)
-cliente.service.url=http://localhost:8083
+# URL do cliente-service (ainda Ãºtil para RestTemplate)
+cliente.service.url=http://localhost:8083/cliente
 
-# Configuração de compatibilidade (se ainda necessária)
+# ConfiguraÃ§Ã£o de compatibilidade (se ainda necessÃ¡ria)
 spring.cloud.compatibility-verifier.enabled=false
