--- a/pedido-service/src/main/resources/application.properties
+++ b/pedido-service/src/main/resources/application.properties
@@ -1,16 +1,17 @@
 spring.application.name=pedido-service
 server.port=8084
 
-# Configurações do Banco de Dados
 spring.datasource.url=jdbc:postgresql://postgres-pedido:5432/pedido_db
 spring.datasource.username=postgres
 spring.datasource.password=gabriel18
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 
 spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-cliente.queue.name=cliente.criado.queue
-pedido.queue.name=pedido.criado.queue
-pagamento.queue.name=pagamento.queue
+cliente.queue=cliente.criado.queue
+pedido.queue=pedido.criado.queue
+pagamento.queue=pagamento.processado.queue
