--- a/pedido-service/src/main/resources/application.properties
+++ b/pedido-service/src/main/resources/application.properties
@@ -1,17 +1,20 @@
 spring.application.name=pedido-service
 server.port=8084
 
-spring.datasource.url=jdbc:postgresql://postgres-pedido:5432/pedido_db
+# ========== DATABASE (PostgreSQL) ==========
+spring.datasource.url=jdbc:postgresql://localhost:5432/pedido_db
 spring.datasource.username=postgres
 spring.datasource.password=gabriel18
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-spring.rabbitmq.host=rabbitmq
+# ========== RABBITMQ ==========
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-cliente.queue=cliente.criado.queue
+# ========== QUEUE NAMES ==========
 pedido.queue=pedido.criado.queue
 pagamento.queue=pagamento.processado.queue
+cliente.queue=cliente.criado.queue
